k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickmorty-service
spec:
  type: ClusterIP
  selector:
    app: rickmorty-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
